ndb - bug#58538 - make sure any buffered DML are flushed before sending any reads